ingrese etiqueta marquee

--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos.css">
     <title>Clase GitHub</title>
 </head>
+
 <body>
+<marquee behavior="" direction="">volví al pasado</marquee>
+
     <h1>Clase github</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quas nemo doloribus sequi ullam, consequuntur debitis perferendis dicta nesciunt maiores repudiandae nobis, cupiditate neque harum! Ea molestias consequatur excepturi sunt.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quas nemo doloribus sequi ullam, consequuntur
+        debitis perferendis dicta nesciunt maiores repudiandae nobis, cupiditate neque harum! Ea molestias consequatur
+        excepturi sunt.</p>
+    <h2>titulo 2</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, sunt incidunt. Iste, eligendi et nesciunt earum
+        dolore accusamus similique atque fugit minus commodi deserunt quaerat, nam sequi ex. Illum, nisi?</p>
 </body>
+
 </html>
