--- a/index.html
+++ b/index.html
@@ -1,23 +1,253 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+      integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+      integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+      crossorigin="anonymous"></script>
     <link rel="stylesheet" href="estilos.css">
-    <title>Clase GitHub</title>
+    <title>RastroPatitas</title>
 </head>
 
-<body>
-<marquee behavior="" direction="">volví al pasado</marquee>
+ <!--NavBar-->
+ <header>
+    <nav class="navbar navbar-expand-sm navbar-dark">
+      <div class="container-fluid">
+        <img src="img/rastrolog.png" class="img" alt="logo">
+        <a class="navbar-brand" href="#">Rastro Patitas</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Servicios</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Productos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contacto</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
 
-    <h1>Clase github</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quas nemo doloribus sequi ullam, consequuntur
-        debitis perferendis dicta nesciunt maiores repudiandae nobis, cupiditate neque harum! Ea molestias consequatur
-        excepturi sunt.</p>
-    <h2>titulo 2</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, sunt incidunt. Iste, eligendi et nesciunt earum
-        dolore accusamus similique atque fugit minus commodi deserunt quaerat, nam sequi ex. Illum, nisi?</p>
+  <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+        aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+        aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+        aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="img/carru1.jpeg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Seguridad y Tranquilidad</h5>
+          <p>Nuestros collares GPS brindan una capa adicional de seguridad para tus seres queridos, mascotas o activos
+            valiosos. Saber siempre su ubicación te da tranquilidad en todo momento.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="img/carru2.jpeg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Localización en Tiempo Real</h5>
+          <p>Nuestro servicio ofrece localización en tiempo real, lo que significa que puedes rastrear y encontrar a
+            quienes más importan instantáneamente, sin importar dónde se encuentren.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="img/carru3.jpeg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Prevención de Pérdidas</h5>
+          <p>: Los collares GPS son ideales para evitar la pérdida de mascotas o pertenencias. Si tu mascota se escapa o
+            un objeto valioso se extravía, puedes localizarlos rápidamente y recuperarlos.</p>
+        </div>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+
+  <h2>Servicios</h2>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-sm-4 feat"></div>
+    </div>
+  </div>
+
+
+  <div class="container marketing">
+
+    <!-- Three columns of text below the carousel -->
+    <div class="row">
+      <div class="col-lg-4">
+
+        <img src="img/gps.png" width="40%" alt="">
+
+        <h2>Rastreo GPS</h2>
+        <p>Rastrea a tu mascota en todo momento através de tu celular o computadora, estando en la calle, oficina o en
+          cualquier sitio.</p>
+        <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+      </div><!-- /.col-lg-4 -->
+
+      <div class="col-lg-4">
+
+        <img src="img/moni.png" width="40%" alt="">
+
+        <h2>Monitoreo Activo</h2>
+        <p>Puedes configurar desde tu App que está disponible en tu PlayStore de Google o en tu AppStore de IOS, una
+          cerca
+          perimetral para que cuando tu mascota salga del límite establecido recibas una alerta.
+        </p>
+        <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+      </div><!-- /.col-lg-4 -->
+
+      <div class="col-lg-4">
+
+        <img src="img/app.png" width="40%" alt="">
+
+        <h2>App Dedicada</h2>
+        <p>Desarrollamos una App en donde puedes guardar todos los datos de tu mascota en caso de extravío, para que
+          quien
+          lo encuentre pueda comunicarse contigo e incluso compartir ubicación en el momento.
+        </p>
+        <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+      </div><!-- /.col-lg-4 -->
+    </div><!-- /.row -->
+
+
+    <!--JumboTron-->
+    <div class="jumbotron p-5 text-white rounded">
+      <h1>¡Cómo funciona!</h1>
+      <p class="fs-4">nuestro servicio de collares GPS ofrece una solución efectiva para rastrear y proteger lo que más
+        te importa.
+        Ya sea para garantizar la seguridad de tus seres queridos, tus mascotas o tus activos, nuestra tecnología
+        confiable y fácil de usar te brinda la tranquilidad que necesitas en un mundo en constante movimiento.
+      </p>
+      <button type="button" class="btn">Contáctanos</button>
+    </div>
+
+    <div class="jumbotron2 p-5 text-white rounded">
+      <h1>Rutas e Historial de Ubicaciones</h1>
+      <img class="img1" src="img/jumbo2.png" alt="check1">
+      <p class="fs-4 col-md-7">Con nuestro servicio, puedes acceder a las rutas recorridas y el historial de
+        ubicaciones, lo que es útil para
+        planificar rutas seguras o revisar patrones de movimiento.
+      </p>
+
+    </div>
+
+    <div class="jumbotron3 p-5 text-white rounded">
+      <h1>Geocercas y Notificaciones</h1>
+      <img class="img2" src="img/jumbo2.png" alt="check2">
+      <p class="fs-4">Nuestros collares GPS son fáciles de usar y compatibles con una variedad de dispositivos. La
+        instalación es
+        sencilla, y puedes acceder a la información desde tu teléfono o computadora.
+      </p>
+    </div>
+
+    <div class="jumbotron4 p-5 text-white rounded">
+      <h1>Compatibilidad y Facilidad de Uso</h1>
+      <img class="img1" src="img/jumbo2.png" alt="check3">
+      <p class="fs-4 col-md-7">Configura geocercas virtuales y recibe notificaciones en tiempo real cuando un collar GPS
+        entre o salga de
+        áreas específicas. Esto es ideal para la seguridad de tus hijos o el monitoreo de tus activos.
+      </p>
+    </div>
+
+    <div class="jumbotron5 p-5 text-white rounded">
+      <h1>Diversidad de Aplicaciones</h1>
+      <img class="img2" src="img/jumbo2.png" alt="check4">
+      <p class="fs-4">Nuestro servicio es versátil y se adapta a diversas necesidades, desde el cuidado de mascotas
+        hasta la gestión
+        de flotas comerciales. Es una solución confiable para una amplia gama de situaciones.
+      </p>
+    </div>
+
+    <h2>Nosotros</h2>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-6 nlft"></div>
+        <div class="col-sm-6 nright"></div>
+      </div>
+    </div>
+
+    <main>
+      <div class="container py-4">
+
+
+        <div class="jumbotron6 p-5 mb-4 bg-body-tertiary rounded-3">
+          <div class="container-fluid py-5">
+            <h1 class="display-5 fw-bold">Visión y Misión</h1>
+            <p class="p1 col-md-12 fs-4">"Ser el referente global en la protección y bienestar de las mascotas a través
+              de
+              tecnología de vanguardia. Nuestra visión es que todas las mascotas gocen de seguridad y libertad mientras
+              exploran el mundo, y que sus dueños tengan paz mental."</p>
+            <button class="btn btn-primary btn-lg" type="button">Contáctanos</button>
+          </div>
+        </div>
+
+        <div class="row align-items-md-stretch">
+          <div class="col-md-6">
+            <div class="h-100 p-5 text-bg-dark rounded-3">
+              <h2>Ubicación</h2>
+              <iframe class="iframe"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d212999.2717471167!2d-70.79463701248287!3d-33.47239250124247!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c5410425af2f%3A0x8475d53c400f0931!2sSantiago%2C%20Regi%C3%B3n%20Metropolitana!5e0!3m2!1ses-419!2scl!4v1694713253227!5m2!1ses-419!2scl"
+                width="420" height="300" style="border:0; align-items: center;"  allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="h-100 p-5 bg-body-tertiary border rounded-4">
+              <h2>Add borders</h2>
+              <p>Or, keep it light and add a border for some added definition to the boundaries of your content. Be sure
+                to look under the hood at the source HTML here as we've adjusted the alignment and sizing of both
+                column's content for equal-height.</p>
+              <button class="btn btn-outline-secondary" type="button">Contáctanos</button>
+            </div>
+          </div>
+        </div>
+
+        <footer class="footer pt-3 mt-4 text-body-secondary border-top">
+          &copy; Todos los derechos reservados 2023
+        </footer>
+      </div>
+    </main>
+
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+      integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+      integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+      crossorigin="anonymous"></script>
 </body>
-
 </html>
