Agrego href entre index y productos

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <a class="nav-link" href="#">Servicios</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Productos</a>
+              <a class="nav-link" href="galeria.html">Productos</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Nosotros</a>
@@ -59,7 +59,7 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="img/carru1.jpeg" class="d-block w-100" alt="...">
+        <img src="img/carru1.jpeg" class="d-block w-100" alt="imgcar1">
         <div class="carousel-caption d-none d-md-block">
           <h5>Seguridad y Tranquilidad</h5>
           <p>Nuestros collares GPS brindan una capa adicional de seguridad para tus seres queridos, mascotas o activos
@@ -67,7 +67,7 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="img/carru2.jpeg" class="d-block w-100" alt="...">
+        <img src="img/carru2.jpeg" class="d-block w-100" alt="imgcar2">
         <div class="carousel-caption d-none d-md-block">
           <h5>Localización en Tiempo Real</h5>
           <p>Nuestro servicio ofrece localización en tiempo real, lo que significa que puedes rastrear y encontrar a
@@ -75,7 +75,7 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="img/carru3.jpeg" class="d-block w-100" alt="...">
+        <img src="img/carru3.jpeg" class="d-block w-100" alt="imgcar3">
         <div class="carousel-caption d-none d-md-block">
           <h5>Prevención de Pérdidas</h5>
           <p>: Los collares GPS son ideales para evitar la pérdida de mascotas o pertenencias. Si tu mascota se escapa o
