--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
   <h2>Servicios</h2>
   <div class="container-fluid">
     <div class="row">
-      <div class="col-sm-4 feat"></div>
+      <div class="col-sm-4 nlft"></div>
+      <div class="col-sm-4 nright"></div>
     </div>
   </div>
 
@@ -105,7 +106,7 @@
 
     <!-- Three columns of text below the carousel -->
     <div class="row">
-      <div class="col-lg-4">
+      <div class="card col-lg-3">
 
         <img src="img/gps.png" width="40%" alt="">
 
@@ -115,7 +116,7 @@
         <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
 
-      <div class="col-lg-4">
+      <div class="card col-lg-3">
 
         <img src="img/moni.png" width="40%" alt="">
 
@@ -127,7 +128,7 @@
         <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
 
-      <div class="col-lg-4">
+      <div class="card col-lg-3">
 
         <img src="img/app.png" width="40%" alt="">
 
@@ -142,6 +143,7 @@
 
 
     <!--JumboTron-->
+    
     <div class="jumbotron p-5 text-white rounded">
       <h1>¡Cómo funciona!</h1>
       <p class="fs-4">nuestro servicio de collares GPS ofrece una solución efectiva para rastrear y proteger lo que más
@@ -159,7 +161,6 @@
         ubicaciones, lo que es útil para
         planificar rutas seguras o revisar patrones de movimiento.
       </p>
-
     </div>
 
     <div class="jumbotron3 p-5 text-white rounded">
@@ -224,10 +225,13 @@
           </div>
           <div class="col-md-6">
             <div class="h-100 p-5 bg-body-tertiary border rounded-4">
-              <h2>Add borders</h2>
-              <p>Or, keep it light and add a border for some added definition to the boundaries of your content. Be sure
-                to look under the hood at the source HTML here as we've adjusted the alignment and sizing of both
-                column's content for equal-height.</p>
+              <h2>Contáctanos</h2>
+              <p>Actualmente nos encontramos perfeccionando nuestro producto para que tengas siempre disponibles nuestros Servicios,
+                cada día pensamos en el bienestar de nuestras mascotas, por lo que entre todos haremos una aplicacion dedicada a nuestras mascotas.
+                <br>
+                Conversemos para resolver todas tus inquitudes a cerca del funcionamiento y tarifas de nuesytos distintos Servicios
+                que sin duda se van a ajustar t us necesidades.
+              </p>
               <button class="btn btn-outline-secondary" type="button">Contáctanos</button>
             </div>
           </div>
