--- a/index.html
+++ b/index.html
@@ -2,256 +2,122 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-      integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-      crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-      integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-      crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="estilos.css">
-    <title>RastroPatitas</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!--Bootstrap CSS-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!--Bootstrap JS & Popper-->
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.2/dist/umd/popper.min.js"
+    integrity="sha384-q9CRHqZndzlxGLOj+xrdLDJa9ittGte1NksRmgJKeCV9DrM7Kz868XYqsKWPpAmn"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+    integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+    crossorigin="anonymous"></script>
+  <!--Stilos CSS-->
+  <link rel="stylesheet" href="estilos.css">
+
+
+  <title>RastroPatitas</title>
 </head>
 
- <!--NavBar-->
- <header>
-    <nav class="navbar navbar-expand-sm navbar-dark">
-      <div class="container-fluid">
-        <img src="img/rastrolog.png" class="img" alt="logo">
-        <a class="navbar-brand" href="#">Rastro Patitas</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Servicios</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="galeria.html">Productos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Nosotros</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contacto</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-  </header>
+<!--NavBar-->
 
-  <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-        aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-        aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-        aria-label="Slide 3"></button>
-    </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="img/carru1.jpeg" class="d-block w-100" alt="imgcar1">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Seguridad y Tranquilidad</h5>
-          <p>Nuestros collares GPS brindan una capa adicional de seguridad para tus seres queridos, mascotas o activos
-            valiosos. Saber siempre su ubicación te da tranquilidad en todo momento.</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="img/carru2.jpeg" class="d-block w-100" alt="imgcar2">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Localización en Tiempo Real</h5>
-          <p>Nuestro servicio ofrece localización en tiempo real, lo que significa que puedes rastrear y encontrar a
-            quienes más importan instantáneamente, sin importar dónde se encuentren.</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="img/carru3.jpeg" class="d-block w-100" alt="imgcar3">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Prevención de Pérdidas</h5>
-          <p>: Los collares GPS son ideales para evitar la pérdida de mascotas o pertenencias. Si tu mascota se escapa o
-            un objeto valioso se extravía, puedes localizarlos rápidamente y recuperarlos.</p>
-        </div>
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
-
-  <h2>Servicios</h2>
+<nav class="navbar navbar-expand-lg navbar-light navbar-dark">
   <div class="container-fluid">
-    <div class="row">
-      <div class="col-sm-4 nlft"></div>
-      <div class="col-sm-4 nright"></div>
+    <img src="img/rastrolog.png" class="img" alt="logo">
+    <a class="navbar-brand" href="#">Rastro Patitas</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar"
+ >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
+      <ul class="nav navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="servicios.html">Servicios</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="galeria.html">Productos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="nosotros.html">Nosotros</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contacto.html">Contacto</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+
+<body class="body">
+
+  
+  <div class="container marketing">
+    <div class="jumbotronIndex p-5">
+      <h1 class="tituloindex">Nunca más perderás el Rastro de tu mascota</h1>
+      <p class="tituloindex2">Porque sabemos lo importnate que es para ti</p>
     </div>
   </div>
 
-
-  <div class="container marketing">
-
-    <!-- Three columns of text below the carousel -->
-    <div class="row">
-      <div class="card col-lg-3">
-
-        <img src="img/gps.png" width="40%" alt="">
-
-        <h2>Rastreo GPS</h2>
-        <p>Rastrea a tu mascota en todo momento através de tu celular o computadora, estando en la calle, oficina o en
-          cualquier sitio.</p>
-        <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
-      </div><!-- /.col-lg-4 -->
-
-      <div class="card col-lg-3">
-
-        <img src="img/moni.png" width="40%" alt="">
-
-        <h2>Monitoreo Activo</h2>
-        <p>Puedes configurar desde tu App que está disponible en tu PlayStore de Google o en tu AppStore de IOS, una
-          cerca
-          perimetral para que cuando tu mascota salga del límite establecido recibas una alerta.
-        </p>
-        <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
-      </div><!-- /.col-lg-4 -->
-
-      <div class="card col-lg-3">
-
-        <img src="img/app.png" width="40%" alt="">
-
-        <h2>App Dedicada</h2>
-        <p>Desarrollamos una App en donde puedes guardar todos los datos de tu mascota en caso de extravío, para que
-          quien
-          lo encuentre pueda comunicarse contigo e incluso compartir ubicación en el momento.
-        </p>
-        <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
-      </div><!-- /.col-lg-4 -->
-    </div><!-- /.row -->
-
-
-    <!--JumboTron-->
+      
     
-    <div class="jumbotron p-5 text-white rounded">
-      <h1>¡Cómo funciona!</h1>
-      <p class="fs-4">nuestro servicio de collares GPS ofrece una solución efectiva para rastrear y proteger lo que más
-        te importa.
-        Ya sea para garantizar la seguridad de tus seres queridos, tus mascotas o tus activos, nuestra tecnología
-        confiable y fácil de usar te brinda la tranquilidad que necesitas en un mundo en constante movimiento.
-      </p>
-      <button type="button" class="btn">Contáctanos</button>
-    </div>
-
-    <div class="jumbotron2 p-5 text-white rounded">
-      <h1>Rutas e Historial de Ubicaciones</h1>
-      <img class="img1" src="img/jumbo2.png" alt="check1">
-      <p class="fs-4 col-md-7">Con nuestro servicio, puedes acceder a las rutas recorridas y el historial de
-        ubicaciones, lo que es útil para
-        planificar rutas seguras o revisar patrones de movimiento.
-      </p>
-    </div>
-
-    <div class="jumbotron3 p-5 text-white rounded">
-      <h1>Geocercas y Notificaciones</h1>
-      <img class="img2" src="img/jumbo2.png" alt="check2">
-      <p class="fs-4">Nuestros collares GPS son fáciles de usar y compatibles con una variedad de dispositivos. La
-        instalación es
-        sencilla, y puedes acceder a la información desde tu teléfono o computadora.
-      </p>
-    </div>
-
-    <div class="jumbotron4 p-5 text-white rounded">
-      <h1>Compatibilidad y Facilidad de Uso</h1>
-      <img class="img1" src="img/jumbo2.png" alt="check3">
-      <p class="fs-4 col-md-7">Configura geocercas virtuales y recibe notificaciones en tiempo real cuando un collar GPS
-        entre o salga de
-        áreas específicas. Esto es ideal para la seguridad de tus hijos o el monitoreo de tus activos.
-      </p>
-    </div>
-
-    <div class="jumbotron5 p-5 text-white rounded">
-      <h1>Diversidad de Aplicaciones</h1>
-      <img class="img2" src="img/jumbo2.png" alt="check4">
-      <p class="fs-4">Nuestro servicio es versátil y se adapta a diversas necesidades, desde el cuidado de mascotas
-        hasta la gestión
-        de flotas comerciales. Es una solución confiable para una amplia gama de situaciones.
-      </p>
-    </div>
-
-    <h2>Nosotros</h2>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-sm-6 nlft"></div>
-        <div class="col-sm-6 nright"></div>
-      </div>
-    </div>
-
-    <main>
-      <div class="container py-4">
-
-
-        <div class="jumbotron6 p-5 mb-4 bg-body-tertiary rounded-3">
-          <div class="container-fluid py-5">
-            <h1 class="display-5 fw-bold">Visión y Misión</h1>
-            <p class="p1 col-md-12 fs-4">"Ser el referente global en la protección y bienestar de las mascotas a través
-              de
-              tecnología de vanguardia. Nuestra visión es que todas las mascotas gocen de seguridad y libertad mientras
-              exploran el mundo, y que sus dueños tengan paz mental."</p>
-            <button class="btn btn-primary btn-lg" type="button">Contáctanos</button>
-          </div>
-        </div>
-
-        <div class="row align-items-md-stretch">
-          <div class="col-md-6">
-            <div class="h-100 p-5 text-bg-dark rounded-3">
-              <h2>Ubicación</h2>
-              <iframe class="iframe"
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d212999.2717471167!2d-70.79463701248287!3d-33.47239250124247!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c5410425af2f%3A0x8475d53c400f0931!2sSantiago%2C%20Regi%C3%B3n%20Metropolitana!5e0!3m2!1ses-419!2scl!4v1694713253227!5m2!1ses-419!2scl"
-                width="420" height="300" style="border:0; align-items: center;"  allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="h-100 p-5 bg-body-tertiary border rounded-4">
-              <h2>Contáctanos</h2>
-              <p>Actualmente nos encontramos perfeccionando nuestro producto para que tengas siempre disponibles nuestros Servicios,
-                cada día pensamos en el bienestar de nuestras mascotas, por lo que entre todos haremos una aplicacion dedicada a nuestras mascotas.
-                <br>
-                Conversemos para resolver todas tus inquitudes a cerca del funcionamiento y tarifas de nuesytos distintos Servicios
-                que sin duda se van a ajustar t us necesidades.
-              </p>
-              <button class="btn btn-outline-secondary" type="button">Contáctanos</button>
-            </div>
-          </div>
-        </div>
-
-        <footer class="footer pt-3 mt-4 text-body-secondary border-top">
-          &copy; Todos los derechos reservados 2023
-        </footer>
-      </div>
-    </main>
-
-
-
-
-
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-      integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-      crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-      integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-      crossorigin="anonymous"></script>
 </body>
+
+
+
+
+<!--Footer-->
+<svg xmlns="http://www.w3.org/2000/svg" class="d-none">
+
+  <symbol id="facebook" viewBox="0 0 16 16">
+    <path
+      d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z" />
+  </symbol>
+  <symbol id="instagram" viewBox="0 0 16 16">
+    <path
+      d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z" />
+  </symbol>
+  <symbol id="twitter" viewBox="0 0 16 16">
+    <path
+      d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z" />
+  </symbol>
+</svg>
+
+<div class="container-footer">
+  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+    <div class="col-md-4 d-flex align-items-center">
+
+      <span class="mb-3 mb-md-0 text-body-secondary">&copy; Rastro Patitas 2023, Todos los derechos reservados</span>
+    </div>
+
+
+    <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+      <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24">
+            <use xlink:href="#twitter" />
+          </svg></a></li>
+      <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24">
+            <use xlink:href="#instagram" />
+          </svg></a></li>
+      <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24">
+            <use xlink:href="#facebook" />
+          </svg></a></li>
+    </ul>
+  </footer>
+</div>
+
+
+
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+  integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+  integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+</body>
+
 </html>
